<resources>
    <string name="app_name">Carbon Tracker</string>
    <string name="select_a_vehicle">Select a Vehicle</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="nickname">Nickname</string>
    <string name="name">Name</string>
    <string name="add_vehicle">Add Vehicle</string>
    <string name="select_a_route">Select a Route</string>
    <string name="journey_emissions">Journey Emissions</string>
    <string name="car_name">Car Name:</string>
    <string name="car_description">Car Info:</string>
    <string name="fuel_type">Fuel Type</string>
    <string name="transmission">Transmission:</string>
    <string name="displacement">Engine Displacement</string>
    <string name="route_info">Route Info:</string>
    <string name="route_name">Name:</string>
    <string name="city_distance">City Distance:</string>
    <string name="highway_distance">Highway Distance</string>
    <string name="total_distance">Total Distance</string>
    <string name="journey_info">Journey Info:</string>
    <string name="date">Date</string>
    <string name="emission">Emissions</string>
    <string name="date_txt">Date</string>
    <string name="route">Route</string>
    <string name="distance">Distance</string>
    <string name="select_vehicle">Select Vehicle</string>
    <string name="bill">bill</string>
    <string name="amount_used">Amount Used (KWH or GJ)</string>
    <string name="people"># of people</string>
    <string name="current_average">Current Average (KWh or GJ)</string>
    <string name="previous_average">Previous Average (kWH or GJ)</string>
    <string name="save">Save</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="select_transportation_mode">Select Transportation Mode:</string>
    <string name="some_environmentally_conscious_tips">Some environmentally conscious tips…</string>
    <string name="insert_tip_text_here">Insert tip text here</string>
    <string name="back">back</string>
    <string name="d_1_of_d_2">%1$d of %2$d</string>
    <string name="forward">forward</string>
    <string name="vehicle">Vehicle</string>
    <string name="delete">Delete</string>
    <string name="xx_xx_xxxx">xx/xx/xxxx</string>
    <string name="carbon_tracker">Carbon Tracker</string>
    <string name="main_menu">Main Menu</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="cancel">Cancel</string>
    <string name="use">USE</string>
    <string name="save_edit">SAVE EDIT</string>
    <string name="choose_the_single_date">Choose the Single Date</string>
    <string name="show_graph">Show Graph</string>
    <string name="language">Language</string>
    <string name="money" translatable="false">$</string>
    <string name="settings">Settings</string>
    <string name="units">Units</string>
    <string name="apply">Apply</string>
    <string name="carTip1">Your total CO2 emissions is %1$,.2f kg.Check tire inflation by checking tires weekly (this can save 400–700 pounds of CO2/year!).</string>
    <string name="carTip2">Your total CO2 emissions is %1$,.2f kg. Remember to drive below 90km/hr to maximize fuel efficiency.</string>
    <string name="carTip3">Your total CO2 emissions is %1$,.2f kg. If the weather is cold, remember that idling wastes fuel.</string>
    <string name="carTip4">Try to reduce some weight from your vehicle, this will cut down on your fuel consumption and reduce your %1$,.2f kg of CO2 emissions.</string>
    <string name="carTip5"> Your total CO2 emissions is %1$,.2f kg. If your destination is less than 1.5km, consider walking or biking there  </string>
    <string name="carTip6">Your total CO2 emissions is %1$,.2f kg. Consider combining trips to reduce your carbon footprint contribution.</string>
    <string name="carTip7">Carpooling just once a week saves 20%% of your total carbon emissions of %1$,.2f.</string>
    <string name="carTip8">Your total CO2 emissions is %1$,.2f kg. Purchase alternative fuel or electric vehicles, which could save 2–6 tonnes of CO2 emissions!</string>
    <string name="carTip9">Taking the bus would have reduced your %1$,.2f kg CO2 by 33%%, consider this instead next time</string>
    <string name="utilTip1">Your total utilities CO2 emissions is %1$,.2f kg. Did you know that hanging laundry outside instead of using a tumble dryer can save ~153kg CO2 a year?</string>
    <string name="utilTip2">Your total utilities CO2 emissions is %1$,.2f kg. Consider turning down heating by 1 degree Celsius can reduce energy consumption by 8%%.</string>
    <string name="utilTip3">Your total utilities CO2 emissions is %1$,.2f kg. Consider using energy saving light bulbs; LEDs can save 90%% of lighting costs and compact fluorescent lights use 75 to 80%% less electricity.</string>
    <string name="utilTip4">Your total utilities CO2 emissions is %1$,.2f kg. Consider taking shorter showers; 15%% of a typical energy bill is spent heating water.</string>
    <string name="utilTip5">Your total utilities CO2 emissions is %1$,.2f kg. Have you considered buying a programmable thermostat?</string>
    <string name="utilTip6">Your total utilities CO2 emissions is %1$,.2f kg. When next you replace electrical appliances, look for an Energy Star logo </string>
    <string name="utilTip7">You have emitted %1$,.2f kg of CO2 with your electricity usage alone, consider switching to natural gas.</string>
    <string name="co2">CO2</string>
    <string name="cost">Cost</string>
    <string name="tree">Trees</string>
    <string name="routeSwitch">routeSwitch</string>
    <string name="mode">mode</string>
    <string name="carbon">carbon</string>
    <string name="tracker">tracker</string>
    <string name="billAmountUsedError">Please enter the amount used</string>
    <string name="billNumberOfPeopleError">Please enter the number of people</string>
    <string name="billCurrentAverageError">Please enter the current average use</string>
    <string name="billPreviousAvgError">Please enter the previous average use</string>
    <string name="billSelectUtilityError">Select Gas or Electricity</string>
    <string name="billStartDateError">Please enter a start date</string>
    <string name="billEndDateError">Please enter an end date</string>
    <string name="billEndBeforeStartError">End date cannot before the start date</string>
    <string name="billFutureDateError">Start date cannot be today or future</string>
    <string name="billEndDateFutureError">End date cannot be future</string>
    <string name="nameError">Please enter a name</string>
    <string name="cityDistanceError">Please enter the city distance</string>
    <string name="hwyDistanceError">Please enter the highway distance</string>
    <string name="positiveCityDistance">Please enter an positive city distance</string>
    <string name="positiveHwyDistance">Please enter an positive highway distance</string>
    <string name="graphFutureDateError">Date cannot be in future</string>
    <string name="graphChooseDateError">Please choose the date</string>
    <string name="deleteJourneyAlert">Are you sure you want to delete this journey?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="bus">Bus</string>
    <string name="cars">Cars</string>
    <string name="skytrain">Skytrain</string>
    <string name="walk_bike">Bike</string>
    <string name="electricity">Electricity</string>
    <string name="naturalGas">Natural gas</string>
    <string name="co2PerCapita">Kg Co2 per capita</string>
    <string name="co2PerCapitaTarget">Kg Co2/capita Target</string>
    <string name="editVehicle">Edit Vehicle</string>
    <string name="edit">Edit \"</string>
    <string name="addNewVehicle">Add New Vehicle</string>
    <string name="pickEarlierDate">Please pick an earlier date</string>
    <string name="emission1">emission</string>
    <string name="pie_graph">Pie Graph</string>
    <string name="bar_graph">Bar Graph</string>
    <string name="fromUtilityList">:  \nfrom \s</string>
    <string name="toUtilityList">\nto \s</string>
    <string name="daysTotalUtilityList">\s days in total\n</string>
    <string name="usedByUtilityList">\s used by</string>
    <string name="peopleUtilityList">\s people in home</string>
    <string name="currentAvgUtilityList">\ncurrent average is: \s</string>
    <string name="peopleShareUtilityList">\n GJ people in home share:</string>
    <string name="perPersonEmissionUtilityList">\nemission per person:</string>
    <string name="perDayEmissionUtilityList">g \nemission per day:</string>
    <string name="gUtilityList">g</string>
    <string name="previousAvgKwhUtilityList">kwh, \nprevious average is:</string>
    <string name="peopleShareKwh">kwh \npeople in home share:</string>
    <string name="newLine">\n</string>
    <string name="previousAvgGj">GJ, \nprevious average is:</string>
    <string name="single_day">SINGLE DAY</string>
    <string name="last_28_days">LAST 28 DAYS</string>
    <string name="last_year">LAST 365 DAYS</string>
    <string name="emission_label">emission</string>
    <string name="utility_remind">You have not entered {hydro, natural gas} in over a month and a half; Tap to add!</string>
    <string name="utility_remind_title">Add a Utility Bill</string>
    <string name="journey_remind">You haven\'t added any Journey\'s today. Tap to add a Journey!</string>
    <string name="more_journeys">Enter more Journeys</string>
    <string name="version">Version: </string>
    <string name="about">About</string>
    <string name="group_name">By Team Charcoal</string>
    <string name="creation_year">Created Spring 2017</string>
    <string name="sfu_home_page" translatable="false">SFU HOME <a href="https://www.sfu.ca/computing.html">https://www.sfu.ca/computing.html</a></string>
    <string name="icon_currently_chosen">Icon Currently Chosen:</string>
    <string name="choose_your_vehicle_icon">Choose Your Vehicle Icon</string>
    <string name="ok" translatable="false">OK</string>
    <string name="vehicleIcon">Vehicle Icon</string>
    <string name="walk">walk</string>
    <string name="icon">Icon</string>
    <string name="you_entered">You entered</string>
    <string name="_journey">Journey</string>
    <string name="want_to_add_more">, want to enter more?</string>
    <string name="add_a_journey_for_today">Add a Journey for Today</string>
    <string name="graphs">Graphs</string>
    <string name="bill_list">Bill List</string>
    <string-array name="graph_spinner">
        <item>Single Day</item>
        <item>Last 28 Days</item>
        <item>Last 376 Days</item>
    </string-array>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sept</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="links">
<item>Resource Links Used:</item>
<item>Info Icon: https://www.iconfinder.com/icons/146127/about_help_info_information_more_info_properties_icon</item>
<item>transport icons: http://www.graphicsfuel.com/2015/01/exclusive-45-free-transport-icons/</item>
<item>GHG per capita: https://www.ec.gc.ca/indicateurs-indicators/default.asp?lang=en&amp;n=79BA5699-1</item>
<item>Tree data: http://www.arborenvironmentalalliance.com/carbon-tree-facts.asp</item>
<item>Gas prices: http://www.statcan.gc.ca/tables-tableaux/sum-som/l01/cst01/econ154a-eng.htm</item>
<item>Utility data: https://www.fortisbc.com/Pages/default.aspx</item>
<item>Utility data: https://www.bchydro.com/index.html </item>
<item>Graphs: https://github.com/PhilJay/MPAndroidChart</item>
</string-array>
</resources>