<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sfu.cmpt276.carbontracker.ui.AboutActivity">

    <TextView
        android:id="@+id/aboutTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/about" />

    <TextView
        android:id="@+id/appNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/aboutTxt"
        android:text="@string/app_name" />
    <TextView
        android:id="@+id/app_version_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/appNameTxt"
        android:text="@string/version" />
    <TextView
        android:id="@+id/groupNameTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/app_version_txt"
        android:text="@string/group_name" />
    <TextView
        android:id="@+id/yearCreatedTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/groupNameTxt"
        android:text="@string/creation_year" />
    <TextView
        android:id="@+id/sfuHomeLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/yearCreatedTxt"
        android:text="@string/sfu_home_page" />


    <TextView
        android:id="@+id/creators_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/sfuHomeLink"
        android:text="" />
    <TextView
        android:id="@+id/links_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/creators_txt"
        android:text=""
        android:autoLink="web"/>
</RelativeLayout>
