<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tips_tipLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_tip_text_here"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/tips_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tips_tipLocation"
        android:layout_marginTop="11dp"
        android:layout_toEndOf="@+id/tips_tip_count"
        android:text="@string/forward" />

    <Button
        android:id="@+id/tips_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tips_tip_count"
        android:layout_alignBottom="@+id/tips_tip_count"
        android:layout_toStartOf="@+id/tips_tip_count"
        android:text="@string/back" />

    <TextView
        android:id="@+id/tips_tip_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/d_1_of_d_2"
        android:textAlignment="center"
        android:layout_alignBaseline="@+id/tips_forward"
        android:layout_alignBottom="@+id/tips_forward"
        android:layout_centerHorizontal="true" />

</RelativeLayout>