<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleIcon"
        android:layout_centerHorizontal="true"
        android:id="@+id/currentLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_currently_chosen"
            android:id="@+id/iconTxt"
            android:layout_centerInParent="true"/>
        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@mipmap/car5"
            android:layout_toRightOf="@id/iconTxt"
            android:id="@+id/iconBtn"
            />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:ems="10"
        android:hint="@string/nickname"
        android:inputType="textCapWords|textAutoCorrect"
        tools:inputType="textCapWords" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/model"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/activity_vertical_margin" />

    <ListView
        android:id="@+id/detailedCarList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:visibility="visible" />
</LinearLayout>