<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sfu.cmpt276.carbontracker.ui.IconActivity">

    <TextView
        android:id="@+id/titleIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:text="@string/choose_your_vehicle_icon"
        android:textSize="30sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleIcon"
        android:layout_centerHorizontal="true"
        android:id="@+id/currentLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/icon_currently_chosen"
            android:id="@+id/iconTxt"
            android:layout_centerInParent="true"/>
        <Button
            android:layout_width="75sp"
            android:layout_height="75sp"
            android:background="@mipmap/car5"
            android:layout_toRightOf="@id/iconTxt"
            android:id="@+id/currentIconImg"
            />
    </RelativeLayout>


<GridLayout
    android:layout_below="@id/currentLayout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:useDefaultMargins="false"
    android:paddingTop="20dp"
    android:alignmentMode="alignMargins"
    android:id="@+id/iconGrid"
    android:layout_centerHorizontal="true">
</GridLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_below="@id/iconGrid"
        android:id="@+id/okIconBtn"
        android:layout_centerHorizontal="true"
        />


</RelativeLayout>
